<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".trikampio_krastines">

    <Button
        android:id="@+id/exit"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/exitButtonText"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/selectMode4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editAInput"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:layout_marginTop="10dp"
            android:hint="@string/editAInputTri" />

        <EditText
            android:id="@+id/editAAngleInput"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:layout_marginTop="10dp"
            android:hint="@string/editAAngleInputTri" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editBInput"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:layout_marginTop="10dp"
            android:hint="@string/editBInputTri" />

        <EditText
            android:id="@+id/editBAngleInput"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:layout_marginTop="10dp"
            android:hint="@string/editBAngleInputTri" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editCInput"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:layout_marginTop="10dp"
            android:hint="@string/editCInputTri" />

        <EditText
            android:id="@+id/editCAngleInput"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:layout_marginTop="10dp"
            android:hint="@string/editCAngleInputTri" />

    </LinearLayout>

    <Button
        android:id="@+id/confButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:onClick="findSides"
        android:text="@string/confButtonTextSingle" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clear"
        android:text="@string/clearButtonText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOutputATitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/txtOutputATitle"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtOutputATxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOutputAAngleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/txtOutputAAngleTitle"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtOutputAAngleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:textSize="25sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOutputBTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/txtOutputBTitle"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtOutputBTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOutputBAngleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/txtOutputBAngleTitle"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtOutputBAngleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:textSize="25sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOutputCTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/txtOutputCTitle"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtOutputCTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOutputCAngleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/txtOutputCAngleTitle"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtOutputCAngleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:textSize="25sp" />

        </LinearLayout>


    </LinearLayout>






</LinearLayout>