<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity_intro">


    <ImageView
        android:id="@+id/quadraticIcon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/quadratic_icon"
        android:theme="@style/Theme.MathGenie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectQuadratic" />

    <Button
        android:id="@+id/selectQuadratic"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/selectMode1"
        android:textColor="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/quadraticIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coordinatesIcon"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/coordinates_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quadraticIcon" />


    <Button
        android:id="@+id/selectCoordinates"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/selectMode2"
        android:textColor="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/coordinatesIcon"
        app:layout_constraintTop_toBottomOf="@+id/selectQuadratic" />

    <ImageView
        android:id="@+id/pythagorasIcon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/pythagoras_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatesIcon" />

    <Button
        android:id="@+id/selectPythagoras"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/selectMode3"
        android:textColor="@color/lightGrey"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pythagorasIcon"
        app:layout_constraintTop_toBottomOf="@+id/selectCoordinates"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:onClick="credits"
        android:text="@string/aboutButtonText"
        android:textColor="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pythagorasIcon"
        app:layout_constraintVertical_bias="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>